fixed homepage layout issues

--- a/src/app/components/nav.module.css
+++ b/src/app/components/nav.module.css
@@ -7,13 +7,12 @@
     font-size: 0.9rem;
     width: 100%;
     z-index: 2;
-    position: absolute;
     border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
+    /* background: linear-gradient(
         to bottom,
         rgba(var(--background-start-rgb), 1),
         rgba(var(--callout-rgb), 0.5)
-    );
+    ); */
     background-clip: padding-box;
     backdrop-filter: blur(24px);
       
@@ -49,9 +48,6 @@
 
 
 @media (hover: hover) and (pointer: fine) {
-    .logo:hover {
-      animation: spin 1s linear infinite;
-    }
     .pages h2:hover {
         color: rgba(225, 225, 225, 0.9);
     }
@@ -69,13 +65,12 @@
         justify-content: space-between;
         width: 100%;
         z-index: 2;
-        position: absolute;
         border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-        background: linear-gradient(
+        /* background: linear-gradient(
           to bottom,
           rgba(var(--background-start-rgb), 1),
           rgba(var(--callout-rgb), 0.5)
-        );
+        ); */
         background-clip: padding-box;
         backdrop-filter: blur(24px);
       }
@@ -94,12 +89,12 @@
 
       .sidebar {
         position: absolute;
-        right: 1rem;
+        right: 0.5rem;
         visibility:visible;
         color: rgba(0, 196, 132, 1);
         font-weight: 700;
         padding: 0.5rem 1rem;
-
+        z-index: 2;
       }
     
       .logo {
