--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,56 +1,3 @@
-/* .main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: space-between;
-  min-height: 100vh;
-  animation: gradient 4s ease infinite;
-  background-image: linear-gradient(135deg, #112941, #020405);
-} */
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  /* position: absolute; */
-  position: fixed;
-  top: 10rem;
-  width: 100%;
-  padding: 4rem 0 0 0;
-  /* background-color: rgba(7, 18, 43, 0); */
-  /* padding: 4rem 0; */
-}
-.center h2 {
-  font-weight: 600;
-  margin-bottom: 0.5rem;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
-
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 100%;
-  height: 900px;
-  /* margin-left: -400px; */
-}
-
-.center::after {
-  background: var(--primary-glow);
-  width: 100%;
-  height: 900px;
-  /* z-index: -1; */
-}
-
-.center::before,
-.center::after {
-  content: '';
-  /* left: 50%; */
-  /* position: absolute; */
-  filter: blur(1px);
-  transform: translateZ(0);
-}
-
 .code {
   font-weight: 700;
   font-family: var(--font-mono);
@@ -87,6 +34,45 @@
   font-size: 0.9rem;
   line-height: 1.5;
   max-width: 34ch;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* position: relative; */
+  width: 100%;
+  min-height: 400px;
+  margin: 8rem 0;
+  padding: 4rem 0;
+}
+
+.center h2 {
+  font-weight: 600;
+  margin-bottom: 0.5rem;
+  z-index: 2;
+  font-family: var(--font-mono);
+}
+
+.center::before {
+  background: var(--secondary-glow);
+  border-radius: 50%;
+  width: 100%;
+  height: 900px;
+}
+
+.center::after {
+  background: var(--primary-glow);
+  width: 100%;
+  height: 900px;
+}
+
+.center::before,
+.center::after {
+  content: '';
+  position: absolute;
+  filter: blur(1px);
+  transform: translateZ(0);
 }
 
 .logo,
@@ -164,20 +150,6 @@
     padding: 4rem;
   }
 
-  .center h2 {
-    font-size: 1.5rem;
-    font-weight: 600;
-    }
-  /* .center::before {
-    padding: 5rem 0 0 0;
-    transform: none;
-    height: 400px;
-  } */
-  .center {
-    /* padding: 6rem 0 0 0; */
-    transform: none;
-    height: 400px;
-  }
   .grid {
     grid-template-columns: 1fr;
     margin-bottom: 120px;
@@ -192,6 +164,17 @@
   .card h2 {
     margin-bottom: 0.5rem;
   }
+
+  .center h2 {
+    font-size: 1.5rem;
+    font-weight: 600;
+    }
+
+  .center {
+      transform: none;
+      height: 400px;
+    }
+
 }
 
 @media (prefers-color-scheme: dark) {
